2005-03-09  Erez Zadok  <ezk@cs.sunysb.edu>

	* m4/macros/host_macros.m4: find out what's the OS software
	distribution name, if any.

	* m4/macros/header_templates.m4: template for DISTRO_NAME.

	* amd/get_args.c (get_version_string): print again full_os, os,
	osver, and vendor (bug fix).
	(get_version_string): print distribution name, if known (e.g.,
	rh9, suse8, etc.).

	* amd/mapc.c (mapc_showtypes): wrap around list of supported map.

2005-03-08  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/map.c (umount_exported): when unmounting file systems on
	exit (when amd.conf global unmount_on_exit=yes), use unmount_mp()
	instead of unmount_node() because the latter always unmounts in
	the foreground, whereas the former unmounts in the bg/fg as
	needed.  Unmounting always in the foreground has two problems: (1)
	if the unmount hangs, amd hangs, and (2) for type:=program, the
	unmount script is execve'd(!) thus replacing the main amd process,
	which never gets to finish up, leaving the amd mount points hung.

	* NEWS: mention new feature of executable maps.

	* AUTHORS: Acknowledge Erik Kline.

	* scripts/amd.conf.5: document executable maps and
	exec_map_timeout parameter.

	* scripts/amd.conf-sample: examples of an executable map and
	exec_map_timeout.

	* m4/macros/header_templates.m4: template for HAVE_MAP_EXEC.

	* doc/am-utils.texi: document Executable maps and exec_map_timeout
	parameter.

	* amd/conf.c (gopt_exec_map_timeout): function to parse
	exec_map_timeout [global] parameter.

	* amd/amd.h (AMFS_EXEC_MAP_TIMEOUT): define default executable map
	timeout to 10 seconds, and a global placeholder for the
	configurable value.

	* amd/amd.c (init_global_options): initialize default executable
	map timeout.

	* amd/Makefile.am (EXTRA_amd_SOURCES): include info_exec.c in
	tarball.

	* configure.in: enable executable maps.

	* amd/mapc.c: define executable map functions and behavior.

	* amd/info_exec.c: executable map implementation from Erik Kline