@@ -92,6 +92,11 @@ do
   fi
 
   # look for a loadable filesystem module (linux)
+  if test -f /lib/modules/$host_os_version/fs/$ac_fs_tmp.ko
+  then
+    eval "ac_cv_mount_type_$ac_fs_name=\\\"$ac_fs_tmp\\\""
+    break
+  fi
   if test -f /lib/modules/$host_os_version/fs/$ac_fs_tmp.o
   then
     eval "ac_cv_mount_type_$ac_fs_name=\\\"$ac_fs_tmp\\\""
@@ -99,6 +104,11 @@ do
   fi
 
   # look for a loadable filesystem module (linux 2.4+)
+  if test -f /lib/modules/$host_os_version/kernel/fs/$ac_fs_tmp/$ac_fs_tmp.ko
+  then
+    eval "ac_cv_mount_type_$ac_fs_name=\\\"$ac_fs_tmp\\\""
+    break
+  fi
   if test -f /lib/modules/$host_os_version/kernel/fs/$ac_fs_tmp/$ac_fs_tmp.o
   then
     eval "ac_cv_mount_type_$ac_fs_name=\\\"$ac_fs_tmp\\\""
@@ -106,6 +116,11 @@ do
   fi
 
   # look for a loadable filesystem module (linux redhat-5.1)
+  if test -f /lib/modules/preferred/fs/$ac_fs_tmp.ko
+  then
+    eval "ac_cv_mount_type_$ac_fs_name=\\\"$ac_fs_tmp\\\""
+    break
+  fi
   if test -f /lib/modules/preferred/fs/$ac_fs_tmp.o
   then
     eval "ac_cv_mount_type_$ac_fs_name=\\\"$ac_fs_tmp\\\""
